[metadata]
name = Open-Launch-Molecular03
version = 0.0.1
author = Evan Lapensee
author_email = evlapensee06@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Molecular03/Open-Launch
project_urls = 
	Bug Tracker = https://github.com/Molecular03/Open-Launch/issues
classifiers:
	Programming Language :: Python :: 3
	License :: GPL-3.0 License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
